# dpkv

./: .gitignore  Cargo.toml  build.rs
src/: app.rs  main.rs  parser.rs
src/models/: channel.rs  extracted_data.rs  message.rs  payment.rs  user.rs
src/parser/: analytics.rs  channels.rs  servers.rs  user.rs  utils.rs
ui/: package-lock.json
