[package]
name = "dpkv"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"
zip = "4.3.0"
simd-json = { version = "0.15.1", features = ["serde_impl"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
#reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
